--- a/index.html
+++ b/index.html
@@ -13,19 +13,31 @@
 
         <header>
 
-            <p>O melhor layout do mundo</p>
+            <div class="container">
+
+                <p>O melhor layout do mundo</p>
+
+            </div>
 
         </header>
 
         <main>
 
-            <h1>Estruturando um layout com HTML e CSS</h1>
+            <div class="container">
+
+                <h1>Estruturando um layout com HTML e CSS</h1>
+
+            </div>
 
         </main>
 
         <footer>
 
-            <p>Feito com amor por Izabella Costa</p>
+            <div class="container">
+
+                <p>Feito com amor por Izabella Costa</p>
+
+            </div>
 
         </footer>
         
