--- a/index.html
+++ b/index.html
@@ -25,7 +25,46 @@
 
             <div class="container">
 
-                <h1>Estruturando um layout com HTML e CSS</h1>
+                <aside>
+
+                    Menu Lateral
+
+                </aside>
+
+                <section>
+
+                    <h1>Estruturando um layout com HTML e CSS</h1>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio hic earum facilis dolores? Quam aspernatur minus eius deserunt ad recusandae accusantium saepe aliquam ipsam?</p>
+
+                    <h2>Meus projetos</h2>
+
+                    <div class="projects">
+
+                        <div class="project">
+
+                            <img src="https://s2-gshow.glbimg.com/19J9NXPOE9EvzcwcsxwUs_0uT4g=/0x0:1440x800/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_e84042ef78cb4708aeebdf1c68c6cbd6/internal_photos/bs/2017/n/B/bEDK6CRByxaLqqPA3kog/20091021-a-grande-familia-ac-006-abre.jpg" alt="">
+                            projeto 1
+
+                        </div>
+
+                        <div class="project">
+
+                            <img src="https://i.pinimg.com/originals/09/1d/10/091d10e152ea9c516adde4049b4781b1.png" alt="">
+                            projeto 2
+
+                        </div>
+
+                        <div class="project">
+
+                            <img src="https://pbs.twimg.com/ext_tw_video_thumb/1668394747390459913/pu/img/o9Yx4cGAAVvxlqKZ.jpg:large" alt="">
+                            projeto 3
+
+                        </div>
+
+                    </div>
+
+                </section>
 
             </div>
 
@@ -35,7 +74,7 @@
 
             <div class="container">
 
-                <p>Feito com amor por Izabella Costa</p>
+                <p>Feito com amor por Izabella Costa 😺</p>
 
             </div>
 
